--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot_unittesting
+spring.datasource.url=jdbc:mysql://localhost:3306/unit_testing
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Hibernate
 spring.jpa.hibernate.ddl-auto=update
